# sports

./: .gitignore  README.md  app.py  params.yaml  pyproject.toml  requirements.txt  run.py  schema.yaml  temp.py
config/: config.yaml
data/: model.pkl  preprocessor.pkl  raw.csv  test.csv  train.csv
data/data_transformation/: transformed_test.csv  transformed_train.csv
notebook/: notebook.ipynb  recipe.ipynb
src/sports/components/: data_ingest.py  data_transformation.py  data_validation.py  ingest.py  model.py
src/sports/config/: __init__.py  configuration.py
src/sports/constants/: __init__.py  tans.py
src/sports/entity/: __init__.py
src/sports/pipeline/: __init__.py  data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_stage.py  model_trainer_stage.py
src/sports/utils/: __init__.py  common.py  expection.py  loger.py
